--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.vs/
+.idea/
+
 
 # Created by https://www.gitignore.io/api/python,pycharm,visualstudiocode,jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=python,pycharm,visualstudiocode,jupyternotebooks
