--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+*/venv/*
+*/.idea/*
 # Created by https://www.gitignore.io/api/visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=visualstudio,visualstudiocode
 
